# aoc2023

W1/: CHANGELOG.md  W1.cabal
W1/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
W1/dist-newstyle/packagedb/ghc-9.4.7/: W1-0.1.0.0-inplace.conf  package.cache
W1/lib/: .TowerOfHanoi.hs.swp  CCValidator.hs  TowerOfHanoi.hs
W2/: CHANGELOG.md  W2.cabal
W2/app/: Main.hs
W2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
W2/dist-newstyle/packagedb/ghc-9.4.7/: W2-0.1.0.0-inplace.conf  package.cache
W2/lib/: Log.hs  LogAnalysis.hs
W3/: CHANGELOG.md  W3.cabal
W3/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
W3/dist-newstyle/tmp/environment.-11387/: .ghc.environment.x86_64-linux-9.4.7
W3/lib/: Golf.hs
W4/: CHANGELOG.md  W4.cabal
W4/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
W4/lib/: Folding.hs
