cabal-version:      2.4
name:               W2
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             uyennhiquang
maintainer:         111651301+uyennhiquang@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules: 
    Log,
    LogAnalysis
  hs-source-dirs: lib
  build-depends: base
  default-language: Haskell2010

executable W2
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Log
      LogAnalysis
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   app, lib
    default-language: Haskell2010
